--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <a href="programa5.html"> Ejemplo 5</a> <br>
     Definicion de arreglo: es una colección ordenada de elementos, como números, letras o cualquier tipo de datos, que se almacenan bajo un solo nombre. <br>
     Las estructuras de datos que se veran son: <br>
-    Ejemplo 1 <br>
-    Ejemplo 2 <br>
-    Ejemplo 3 <br>
+    <a href="ejemplo1.html"> Ejemplo 1 - 10 Elementos</a> <br>
+    <a href="ejemplo2.html"> Ejemplo 2 - Cuadro Magico</a> <br>
     I. Arreglos <br>
     II. Matrices <br>
     III. Listas <br>
