--- a/ejemplo2.html
+++ b/ejemplo2.html
@@ -3,24 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script>
-        var contador=0;
-        function Capturar(){
-            document.getElementById("contador").innerHTML=`Elemento [${contador++}]:`;
-        }
-    </script>
+    <title>Cuadrado Magico</title>
+    <link rel="stylesheet" href="./css/Style-CuadroMagico.css">
+    <script src="./CuadroMagicaOf.js"></script>
 </head>
-<body>
-<h1>Arreglos 2: </h1>
-<p>Captura un arreglo de 10 elementos de tipo entero, imprima el arreglo de forma vertical y horizontal. 
-    Imprima el arreglo de forma ascendente y descendente, encuentra el elemento menor, el mayor, la suma, el promedio o media, 
-    la mediana y la moda.
-</p>
-<p style="display: inline;">Elemento [0]</p>
-<input type="number" id="elemento">
-<input type="button" value="Capturar" id="capturar" onclick="Capturar()">
-<input type="button" value="Reiniciar">
-<input type="button" value="Generar Resultados" disabled>
+<body onload="Generar()">
+    <h1>Cuadrado Magico</h1>
+    <p>Los cuadrados magicos, son un conjunto de de números enteros diferentes colocados en las casillas de un cuadrado 
+    y que se caracterizan porque las sumas de sus filas, columnas y diagonales principales es siempre la misma, el valor
+    de la suma es denominado Constante mágica de Cuadrado. </p>
+    <br>
+    <p>Selecciona el tamaño del cuadrado:</p>
+    <select id="lados" onchange="Generar()">
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+    </select>
+    <input type="button" value="Generar" onclick="Generar()"><br>
+    <input type="button" value="Calcular" onclick="Calcular()">
+    <input type="button" value="Ejemplo al cuadrado" onclick="EjemploCuadrado()">
+    <input type="button" value="Ejemplo al cuadrado magico" onclick="EjemploMagico()">
+    <br><br>
+
+    <h1 id="verificar" style="color: crimson;">No es cuadrado magico!</h1>
+    <table border="0.5" id="cuadrado" style="border-collapse: collapse;"></table><br><br>
+    <a href="index.html"><button>Regresar al menu</button></a><br>
 </body>
 </html>
