--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 <body>
     <h1>Unidad didactica 1 Introduccion a los algoritmos y estructuras de datos</h1>    
     Definicion de algoritmo: serie de pasos o una receta para realizar una tarea en especifico <br>
+    <p> Algoritmos de la Actividad 1</p>
     <a href="programa1.html"> Ejemplo 1</a> <br>
     <a href="programa2.html"> Ejemplo 2</a> <br>
     <a href="programa3.html"> Ejemplo 3</a> <br>
     <a href="programa4.html"> Ejemplo 4</a> <br>
     <a href="programa5.html"> Ejemplo 5</a> <br>
-    Definicion de arreglo: es una colección ordenada de elementos, como números, letras o cualquier tipo de datos, que se almacenan bajo un solo nombre. <br>
-    Las estructuras de datos que se veran son: <br>
+    <p> Algoritmos de la Actividad 2</p>
     <a href="ejemplo1.html"> Ejemplo 1 - 10 Elementos</a> <br>
     <a href="ejemplo2.html"> Ejemplo 2 - Cuadro Magico</a> <br>
+    <a href="ejemplo3.html"> Ejemplo 3 - Memorama</a> <br>
+    Definicion de arreglo: es una colección ordenada de elementos, como números, letras o cualquier tipo de datos, que se almacenan bajo un solo nombre. <br>
+    Las estructuras de datos que se veran son: <br>
     I. Arreglos <br>
     II. Matrices <br>
     III. Listas <br>
