--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="ejemplo1.html"> Ejemplo 1 - 10 Elementos</a> <br>
     <a href="ejemplo2.html"> Ejemplo 2 - Cuadro Magico</a> <br>
     <a href="ejemplo3.html"> Ejemplo 3 - Memorama</a> <br>
+    <a href="tictactoe.html"> Ejemplo 3 - TicTacToe</a> <br>
     Definicion de arreglo: es una colección ordenada de elementos, como números, letras o cualquier tipo de datos, que se almacenan bajo un solo nombre. <br>
     Las estructuras de datos que se veran son: <br>
     I. Arreglos <br>
