--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,7 +6,7 @@
     <title>TicTacToe</title>
 
     <link rel="stylesheet" href="./css/tictactoe.css">
-    <script src="./ofuscados/tictactoe.js"></script>
+    <script src="./tictactoe.js"></script>
 </head>
 <body>
     <h1> •TicTacToe•</h1> <br>
