--- a/tictactoe.html
+++ b/tictactoe.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TicTacToe</title>
 
-    <link rel="stylesheet" href="./css/tictactoe.css">
+    <link rel="stylesheet" href="./tictactoe.css">
     <script src="./tictactoe.js"></script>
 </head>
 <body>
