--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <a href="cuadromagico.html"> Ejemplo 2 - Cuadro Magico</a> <br>
     <a href="Memorama.html"> Ejemplo 3 - Memorama</a> <br>
     <a href="tictactoe.html"> Ejemplo 4 - TicTacToe</a> <br>
+    <a href="stack.html"> Ejemplo 5 - Stack</a> <br>
+    <a href="pila.html"> Ejemplo 6 - Utilización de pilas para la evaluación de exp</a> <br>
+    <a href="julio.html"> Ejemplo 7 - Cifrado de César 1.</a> <br>
     Definicion de arreglo: es una colección ordenada de elementos, como números, letras o cualquier tipo de datos, que se almacenan bajo un solo nombre. <br>
     Las estructuras de datos que se veran son: <br>
     I. Arreglos <br>
