--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <a href="stack.html"> Ejemplo 5 - Stack</a> <br>
     <a href="pila.html"> Ejemplo 6 - Utilización de pilas para la evaluación de exp</a> <br>
     <a href="julio.html"> Ejemplo 7 - Cifrado de César 1.</a> <br>
+    <a href="juliodes.html"> Ejemplo 8 - Descifrado de César .</a> <br>
+    <a href="listagen.html"> Ejemplo 9 - Lista Generica .</a> <br>
     Definicion de arreglo: es una colección ordenada de elementos, como números, letras o cualquier tipo de datos, que se almacenan bajo un solo nombre. <br>
     Las estructuras de datos que se veran son: <br>
     I. Arreglos <br>
